More papers added

--- a/biblio.tex
+++ b/biblio.tex
@@ -54,3 +54,29 @@
   biburl    = {http://dblp.org/rec/bib/journals/jda/PatilST12},
   bibsource = {dblp computer science bibliography, http://dblp.org}
 }
+
+@inproceedings{DBLP:conf/isaac/ChanZ15,
+  author    = {Timothy M. Chan and
+               Gelin Zhou},
+  title     = {Multidimensional Range Selection},
+  booktitle = {{ISAAC}},
+  series    = {Lecture Notes in Computer Science},
+  volume    = {9472},
+  pages     = {83--92},
+  publisher = {Springer},
+  year      = {2015}
+}
+
+@inproceedings{DBLP:conf/isaac/JaJaMS04,
+  author    = {Joseph J{\'{a}}J{\'{a}} and
+               Christian Worm Mortensen and
+               Qingmin Shi},
+  title     = {Space-Efficient and Fast Algorithms for Multidimensional Dominance
+               Reporting and Counting},
+  booktitle = {{ISAAC}},
+  series    = {Lecture Notes in Computer Science},
+  volume    = {3341},
+  pages     = {558--568},
+  publisher = {Springer},
+  year      = {2004}
+}
