--- a/biblio.bib
+++ b/biblio.bib
@@ -137,12 +137,12 @@ url="https://doi.org/10.1007/978-3-642-25591-5_16"
 
 @book{Navarro:2016:CDS:3092586,
  author = {Navarro, Gonzalo},
-  title = {Compact Data Structures: A Practical Approach},
-   year = {2016},
-    isbn = {1107152380, 9781107152380},
-	 edition = {1st},
-  publisher = {Cambridge University Press},
-   address = {New York, NY, USA},
+ title = {Compact Data Structures: A Practical Approach},
+ year = {2016},
+ isbn = {1107152380, 9781107152380},
+ edition = {1st},
+ publisher = {Cambridge University Press},
+ address = {New York, NY, USA},
 } 
 
 @inproceedings{Arroyuelo:2010:STP:2790231.2790240,
@@ -159,3 +159,20 @@ url="https://doi.org/10.1007/978-3-642-25591-5_16"
   publisher = {Society for Industrial and Applied Mathematics},
   address = {Philadelphia, PA, USA},
 } 
+
+@article{DBLP:journals/ipl/AtkinsonS92,
+  author    = {M. D. Atkinson and
+               J{\"{o}}rg{-}R{\"{u}}diger Sack},
+  title     = {Generating Binary Trees at Random},
+  journal   = {Inf. Process. Lett.},
+  volume    = {41},
+  number    = {1},
+  pages     = {21--23},
+  year      = {1992},
+  url       = {https://doi.org/10.1016/0020-0190(92)90075-7},
+  doi       = {10.1016/0020-0190(92)90075-7},
+  timestamp = {Tue, 06 Jun 2017 01:00:00 +0200},
+  biburl    = {http://dblp.org/rec/bib/journals/ipl/AtkinsonS92},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
