Wavelet tree stuff

--- a/biblio.bib
+++ b/biblio.bib
@@ -175,4 +175,11 @@ url="https://doi.org/10.1007/978-3-642-25591-5_16"
   biburl    = {http://dblp.org/rec/bib/journals/ipl/AtkinsonS92},
   bibsource = {dblp computer science bibliography, http://dblp.org}
 }
+@ARTICLE {,
+    author  = "A. R{\'e}nyi and G. Szekeres",
+    title   = "On the height of trees",
+    journal = "Australian Journal of Mathematics",
+    year    = "1967",
+    pages   = "497-507"
+}
 
