--- a/biblio.bib
+++ b/biblio.bib
@@ -97,10 +97,6 @@
 author="He, Meng
 and Munro, J. Ian
 and Zhou, Gelin",
-editor="Asano, Takao
-and Nakano, Shin-ichi
-and Okamoto, Yoshio
-and Watanabe, Osamu",
 title="Path Queries in Weighted Trees",
 bookTitle="Algorithms and Computation: 22nd International Symposium, ISAAC 2011, Yokohama, Japan, December 5-8, 2011. Proceedings",
 year="2011",
@@ -160,6 +156,48 @@ url="https://doi.org/10.1007/978-3-642-25591-5_16"
   address = {Philadelphia, PA, USA},
 } 
 
+@misc{experimentalDatasets,
+    title = {{Experimental datasets} Graphs, trees, parentheses},
+    howpublished = {\url{https://users.dcc.uchile.cl/~jfuentess/datasets/trees.php}},
+	note = {Accessed: 2018-03-14}
+}
+@misc{nasaHubble,
+    title = {A Look at the Numbers as NASA's Hubble Space Telescope Enters its 25th Year},
+    howpublished = {\url{https://www.nasa.gov/content/goddard/a-look-at-the-numbers-as-nasas-hubble-space-telescope-enters-its-25th-year}},
+	note = {Accessed: 2018-03-14}
+}
+@misc{hadronCollider,
+    title = {Processing: What to record?},
+    howpublished = {\url{https://home.cern/about/computing/processing-what-record}},
+	note = {Accessed: 2018-03-14}
+}
+@misc{theEconomist2010,
+    title = {Data, data everywhere},
+    howpublished = {\url{https://www.economist.com/node/15557443}},
+	note = {Accessed: 2018-03-14}
+}
+
+@book{Graham:1994:CMF:562056,
+ author = {Graham, Ronald L. and Knuth, Donald E. and Patashnik, Oren},
+ title = {Concrete Mathematics: A Foundation for Computer Science},
+ year = {1994},
+ isbn = {0201558025},
+ edition = {2nd},
+ publisher = {Addison-Wesley Longman Publishing Co., Inc.},
+ address = {Boston, MA, USA},
+} 
+
+@article{Reuter:2015,
+	author = {Reuter, J.A. and Spacek, D.M. and Snyder, M.P.},
+   	year = {2015}, 
+	title = {High-Throughput Sequencing Technologies.},
+   	journal = {Molecular Cell},
+	volume = {58},
+	number = {4}, 
+	pages = {586-–597}, 
+	biburl = {http://doi.org/10.1016/j.molcel.2015.05.004},
+}
+
 @article{DBLP:journals/ipl/AtkinsonS92,
   author    = {M. D. Atkinson and
                J{\"{o}}rg{-}R{\"{u}}diger Sack},
@@ -183,3 +221,677 @@ url="https://doi.org/10.1007/978-3-642-25591-5_16"
     pages   = "497-507"
 }
 
+@article{DBLP:journals/siamcomp/FischerH11,
+  author    = {Johannes Fischer and
+                Volker Heun},
+  title     = {Space-Efficient Preprocessing Schemes for Range Minimum Queries on
+               Static Arrays},
+  journal   = {{SIAM} J. Comput.},
+  volume    = {40},
+  number    = {2},
+  pages     = {465--492},
+  year      = {2011},
+  url       = {https://doi.org/10.1137/090779759},
+  doi       = {10.1137/090779759},
+  timestamp = {Sat, 27 May 2017 14:22:59 +0200},
+  biburl    = {http://dblp.org/rec/bib/journals/siamcomp/FischerH11},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
+@inproceedings{DBLP:conf/dcc/FerradaN16,
+  author    = {Hector Ferrada and
+                 Gonzalo Navarro},
+  title     = {Improved Range Minimum Queries},
+  booktitle = {2016 Data Compression Conference, {DCC} 2016, Snowbird, UT, USA, March
+		                 30 - April 1, 2016},
+  pages     = {516--525},
+  year      = {2016},
+  url       = {https://doi.org/10.1109/DCC.2016.42},
+  doi       = {10.1109/DCC.2016.42},
+  timestamp = {Tue, 23 May 2017 01:07:03 +0200},
+  biburl    = {http://dblp.org/rec/bib/conf/dcc/FerradaN16},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
+@article{DBLP:journals/mst/Sadakane07,
+  author    = {Kunihiko Sadakane},
+  title     = {Compressed Suffix Trees with Full Functionality},
+  journal   = {Theory Comput. Syst.},
+  volume    = {41},
+  number    = {4},
+  pages     = {589--607},
+  year      = {2007},
+  url       = {https://doi.org/10.1007/s00224-006-1198-x},
+  doi       = {10.1007/s00224-006-1198-x},
+  timestamp = {Mon, 06 Nov 2017 12:13:17 +0100},
+  biburl    = {http://dblp.org/rec/bib/journals/mst/Sadakane07},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
+@article{DBLP:journals/njc/KrizancMS05,
+    author    = {Danny Krizanc and
+	               Pat Morin and
+                 Michiel H. M. Smid},
+    title     = {Range Mode and Range Median Queries on Lists and Trees},
+    journal   = {Nord. J. Comput.},
+    volume    = {12},
+    number    = {1},
+    pages     = {1--17},
+    year      = {2005},
+    timestamp = {Wed, 03 May 2006 13:50:41 +0200},
+    biburl    = {http://dblp.org/rec/bib/journals/njc/KrizancMS05},
+    bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
+@article{DBLP:journals/jal/BenderFPSS05,
+  author    = {Michael A. Bender and
+                Martin Farach{-}Colton and
+                Giridhar Pemmasani and
+               Steven Skiena and
+               Pavel Sumazin},
+  title     = {Lowest common ancestors in trees and directed acyclic graphs},
+  journal   = {J. Algorithms},
+  volume    = {57},
+  number    = {2},
+  pages     = {75--94},
+  year      = {2005},
+  url       = {https://doi.org/10.1016/j.jalgor.2005.08.001},
+  doi       = {10.1016/j.jalgor.2005.08.001},
+  timestamp = {Sun, 28 May 2017 13:24:57 +0200},
+  biburl    = {http://dblp.org/rec/bib/journals/jal/BenderFPSS05},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
+@article{DBLP:journals/tcs/BrodalGJS11,
+  author    = {Gerth St{\o}lting Brodal and
+                 Beat Gfeller and
+                Allan Gr{\o}nlund J{\o}rgensen and
+              Peter Sanders},
+  title     = {Towards optimal range medians},
+  journal   = {Theor. Comput. Sci.},
+  volume    = {412},
+  number    = {24},
+  pages     = {2588--2601},
+  year      = {2011},
+  url       = {https://doi.org/10.1016/j.tcs.2010.05.003},
+  doi       = {10.1016/j.tcs.2010.05.003},
+  timestamp = {Sun, 28 May 2017 13:19:59 +0200},
+  biburl    = {https://dblp.org/rec/bib/journals/tcs/BrodalGJS11},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{Sleator:1983:DSD:61337.61338,
+  author = {Sleator, Daniel D. and Tarjan, Robert Endre},
+  title = {A Data Structure for Dynamic Trees},
+  journal = {J. Comput. Syst. Sci.},
+  issue_date = {June 1983},
+  volume = {26},
+  number = {3},
+  month = jun,
+  year = {1983},
+  issn = {0022-0000},
+  pages = {362--391},
+  numpages = {30},
+  url = {http://dx.doi.org/10.1016/0022-0000(83)90006-5},
+  doi = {10.1016/0022-0000(83)90006-5},
+  acmid = {61338},
+  publisher = {Academic Press, Inc.},
+  address = {Orlando, FL, USA},
+} 
+
+@article{Blum:1973:TBS:1739940.1740109,
+  author = {Blum, Manuel and Floyd, Robert W. and Pratt, Vaughan and Rivest, Ronald L. and Tarjan, Robert E.},
+  title = {Time Bounds for Selection},
+  journal = {J. Comput. Syst. Sci.},
+  issue_date = {August, 1973},
+  volume = {7},
+  number = {4},
+  month = aug,
+  year = {1973},
+  issn = {0022-0000},
+  pages = {448--461},
+  numpages = {14},
+  url = {http://dx.doi.org/10.1016/S0022-0000(73)80033-9},
+  doi = {10.1016/S0022-0000(73)80033-9},
+  acmid = {1740109},
+  publisher = {Academic Press, Inc.},
+  address = {Orlando, FL, USA},
+} 
+
+@inproceedings{gbmp2014sea,
+  title     = {From Theory to Practice: Plug and Play with Succinct Data Structures},
+  author    = {Gog, Simon and Beller, Timo and Moffat, Alistair and Petri, Matthias},
+  booktitle = {13th International Symposium on Experimental Algorithms, (SEA 2014)},
+  year      = {2014},
+  pages     = {326-337},
+  ee        = {http://dx.doi.org/10.1007/978-3-319-07959-2_28}
+}
+
+@article{DBLP:journals/talg/NavarroS14,
+  author    = {Gonzalo Navarro and
+                Kunihiko Sadakane},
+  title     = {Fully Functional Static and Dynamic Succinct Trees},
+  journal   = {{ACM} Trans. Algorithms},
+  volume    = {10},
+  number    = {3},
+  pages     = {16:1--16:39},
+  year      = {2014},
+  url       = {http://doi.acm.org/10.1145/2601073},
+  doi       = {10.1145/2601073},
+  timestamp = {Mon, 06 Nov 2017 12:13:53 +0100},
+  biburl    = {https://dblp.org/rec/bib/journals/talg/NavarroS14},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{DBLP:journals/tcs/SepulvedaFHZ17,
+  author    = {Jos{\'{e}} Fuentes Sep{\'{u}}lveda and
+		                 Leo Ferres and
+				                Meng He and
+		               Norbert Zeh},
+  title     = {Parallel construction of succinct trees},
+  journal   = {Theor. Comput. Sci.},
+  volume    = {700},
+  pages     = {1--22},
+  year      = {2017},
+  url       = {https://doi.org/10.1016/j.tcs.2017.07.025},
+  doi       = {10.1016/j.tcs.2017.07.025},
+  timestamp = {Tue, 24 Oct 2017 16:53:59 +0200},
+  biburl    = {https://dblp.org/rec/bib/journals/tcs/SepulvedaFHZ17},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{DBLP:journals/tcs/GearyRRR06,
+  author    = {Richard F. Geary and
+                 Naila Rahman and
+									                Rajeev Raman and
+													               Venkatesh Raman},
+  title     = {A simple optimal representation for balanced parentheses},
+  journal   = {Theor. Comput. Sci.},
+  volume    = {368},
+  number    = {3},
+  pages     = {231--246},
+  year      = {2006},
+  url       = {https://doi.org/10.1016/j.tcs.2006.09.014},
+  doi       = {10.1016/j.tcs.2006.09.014},
+  timestamp = {Thu, 08 Jun 2017 09:02:47 +0200},
+  biburl    = {https://dblp.org/rec/bib/journals/tcs/GearyRRR06},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@book{Knuth:1997:ACP:270146,
+ author = {Knuth, Donald E.},
+ title = {The Art of Computer Programming, Volume 2 (3rd Ed.): Seminumerical Algorithms},
+ year = {1997},
+ isbn = {0-201-89684-2},
+ publisher = {Addison-Wesley Longman Publishing Co., Inc.},
+ address = {Boston, MA, USA},
+} 
+
+@inproceedings{DBLP:conf/dcc/GogF10,
+  author    = {Simon Gog and Johannes Fischer},
+  title     = {Advantages of Shared Data Structures for Sequences of Balanced Parentheses},
+  booktitle = {2010 Data Compression Conference {(DCC} 2010), 24-26 March 2010, Snowbird, UT, {USA}},
+  pages     = {406--415},
+  year      = {2010},
+  crossref  = {DBLP:conf/dcc/2010},
+  url       = {https://doi.org/10.1109/DCC.2010.43},
+  doi       = {10.1109/DCC.2010.43},
+  timestamp = {Tue, 23 May 2017 01:07:03 +0200},
+  biburl    = {https://dblp.org/rec/bib/conf/dcc/GogF10},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@BOOK{combinatorialAlgorithms2nd,
+  TITLE = {Combinatorial Algorithms},
+  SUBTITLE = {For Computers and Calculators},
+  AUTHOR = {Alber Nijenhius and Herbert S. Wilf},
+  YEAR = {1978}, 
+  PUBLISHER = {Academic Press},
+}
+
+@techreport{erkki98,
+    title = {Generating Random Binary Trees -- a Survey},
+    author = {Erkki M{\"{a}}kinen},
+    year = {1998},
+    institution = {University of Tampere},
+    month = {03},
+	address = {Department of Computer Science
+			P.O.Box 607
+					FIN-33101 Tampere, Finland},
+	url = {http://www.sis.uta.fi/cs/reports/pdf/A-1998-3.pdf}
+}
+
+@inproceedings{BoVWFI,
+  author = "Paolo Boldi and Sebastiano Vigna",
+  title = "The {W}eb{G}raph Framework {I}: {C}ompression Techniques",
+  year = 2004,
+  booktitle = "Proc. of the Thirteenth International World Wide Web Conference (WWW 2004)",
+  address = "Manhattan, USA",
+  pages = "595--601",
+  publisher = "ACM Press"
+}
+
+@article{DBLP:journals/ipl/AtkinsonS92,
+  author    = {M. D. Atkinson and
+	                 J{\"{o}}rg{-}R{\"{u}}diger Sack},
+  title     = {Generating Binary Trees at Random},
+  journal   = {Inf. Process. Lett.},
+  volume    = {41},
+  number    = {1},
+  pages     = {21--23},
+  year      = {1992},
+  url       = {https://doi.org/10.1016/0020-0190(92)90075-7},
+  doi       = {10.1016/0020-0190(92)90075-7},
+  timestamp = {Tue, 06 Jun 2017 22:27:05 +0200},
+  biburl    = {https://dblp.org/rec/bib/journals/ipl/AtkinsonS92},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{DBLP:journals/talg/HeMS12,
+  author    = {Meng He and
+                J. Ian Munro and
+              Srinivasa Rao Satti},
+  title     = {Succinct ordinal trees based on tree covering},
+  journal   = {{ACM} Trans. Algorithms},
+  volume    = {8},
+  number    = {4},
+  pages     = {42:1--42:32},
+  year      = {2012},
+  url       = {http://doi.acm.org/10.1145/2344422.2344432},
+  doi       = {10.1145/2344422.2344432},
+  timestamp = {Thu, 15 Jun 2017 21:30:44 +0200},
+  biburl    = {https://dblp.org/rec/bib/journals/talg/HeMS12},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{DBLP:conf/spire/GagiePT09,
+  author    = {Travis Gagie and
+				                 Simon J. Puglisi and
+				                Andrew Turpin},
+  title     = {Range Quantile Queries: Another Virtue of Wavelet Trees},
+  booktitle = {String Processing and Information Retrieval, 16th International Symposium,
+					                 {SPIRE} 2009, Saariselk{\"{a}}, Finland, August 25-27, 2009,
+									                Proceedings},
+  pages     = {1--6},
+  year      = {2009},
+  crossref  = {DBLP:conf/spire/2009},
+  url       = {https://doi.org/10.1007/978-3-642-03784-9_1},
+  doi       = {10.1007/978-3-642-03784-9_1},
+  timestamp = {Mon, 06 Nov 2017 12:14:27 +0100},
+  biburl    = {https://dblp.org/rec/bib/conf/spire/GagiePT09},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{DBLP:journals/talg/FerraginaMMN07,
+  author    = {Paolo Ferragina and
+                 Giovanni Manzini and
+                Veli M{\"{a}}kinen and
+               Gonzalo Navarro},
+  title     = {Compressed representations of sequences and full-text indexes},
+  journal   = {{ACM} Trans. Algorithms},
+  volume    = {3},
+  number    = {2},
+  pages     = {20},
+  year      = {2007},
+  url       = {http://doi.acm.org/10.1145/1240233.1240243},
+  doi       = {10.1145/1240233.1240243},
+  timestamp = {Fri, 06 Jan 2017 12:04:31 +0100},
+  biburl    = {https://dblp.org/rec/bib/journals/talg/FerraginaMMN07},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{DBLP:journals/siamcomp/BilleLRSSW15,
+  author    = {Philip Bille and
+                Gad M. Landau and
+               Rajeev Raman and
+               Kunihiko Sadakane and
+                 Srinivasa Rao Satti and
+                Oren Weimann},
+  title     = {Random Access to Grammar-Compressed Strings and Trees},
+  journal   = {{SIAM} J. Comput.},
+  volume    = {44},
+  number    = {3},
+  pages     = {513--539},
+  year      = {2015},
+  url       = {https://doi.org/10.1137/130936889},
+  doi       = {10.1137/130936889},
+  timestamp = {Mon, 06 Nov 2017 12:13:12 +0100},
+  biburl    = {https://dblp.org/rec/bib/journals/siamcomp/BilleLRSSW15},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{DBLP:journals/jda/Navarro14,
+  author    = {Gonzalo Navarro},
+  title     = {Wavelet trees for all},
+  journal   = {J. Discrete Algorithms},
+  volume    = {25},
+  pages     = {2--20},
+  year      = {2014},
+  url       = {https://doi.org/10.1016/j.jda.2013.07.004},
+  doi       = {10.1016/j.jda.2013.07.004},
+  timestamp = {Sun, 28 May 2017 13:19:36 +0200},
+  biburl    = {https://dblp.org/rec/bib/journals/jda/Navarro14},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@phdthesis{gzhou2017,
+  title    = {In-Memory Storage for Labeled Tree-Structured Data},
+  school   = {University of Waterloo},
+  author   = {Gelin Zhou},
+  year     = {2017}, 
+}
+
+@book{Cormen:2009:IAT:1614191,
+ author = {Cormen, Thomas H. and Leiserson, Charles E. and Rivest, Ronald L. and Stein, Clifford},
+ title = {Introduction to Algorithms, Third Edition},
+ year = {2009},
+ isbn = {0262033844, 9780262033848},
+ edition = {3rd},
+ publisher = {The MIT Press},
+} 
+
+@misc{MHePrivate,
+  author = "Meng He",
+  year = "2018",
+  howpublished = "personal communication"
+}
+
+@article{DBLP:journals/jal/Wilf81,
+  author    = {Herbert S. Wilf},
+  title     = {The Uniform Selection of Free Trees},
+  journal   = {J. Algorithms},
+  volume    = {2},
+  number    = {2},
+  pages     = {204--207},
+  year      = {1981},
+  url       = {https://doi.org/10.1016/0196-6774(81)90021-3},
+  doi       = {10.1016/0196-6774(81)90021-3},
+  timestamp = {Sun, 28 May 2017 13:24:58 +0200},
+  biburl    = {https://dblp.org/rec/bib/journals/jal/Wilf81},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{RenyiSzekeres1967,
+	author = {R{\'e}nyi, A. and  Szekeres, G.},
+    year =	{1967},
+    title = {On the height of trees.},
+   	journal = {Journal of the Australian Mathematical Society},
+	volume = {7},
+    number = {4},
+   	pages = {497--507},
+   	url= {doi:10.1017/S1446788700004432}
+}
+
+@article{DBLP:journals/fttcs/Vitter06,
+  author    = {Jeffrey Scott Vitter},
+  title     = {Algorithms and Data Structures for External Memory},
+  journal   = {Foundations and Trends in Theoretical Computer Science},
+  volume    = {2},
+  number    = {4},
+  pages     = {305--474},
+  year      = {2006},
+  url       = {https://doi.org/10.1561/0400000014},
+  doi       = {10.1561/0400000014},
+  timestamp = {Fri, 26 May 2017 22:51:04 +0200},
+  biburl    = {https://dblp.org/rec/bib/journals/fttcs/Vitter06},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{DBLP:journals/jacm/FerraginaLMM09,
+  author    = {Paolo Ferragina and
+                 Fabrizio Luccio and
+               Giovanni Manzini and
+              S. Muthukrishnan},
+  title     = {Compressing and indexing labeled trees, with applications},
+  journal   = {J. {ACM}},
+  volume    = {57},
+  number    = {1},
+  pages     = {4:1--4:33},
+  year      = {2009},
+  url       = {http://doi.acm.org/10.1145/1613676.1613680},
+  doi       = {10.1145/1613676.1613680},
+  timestamp = {Fri, 06 Jan 2017 11:28:53 +0100},
+  biburl    = {https://dblp.org/rec/bib/journals/jacm/FerraginaLMM09},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{RMBB89,
+  added-at = {2006-07-04T16:33:03.000+0200},
+  author = {Rada, R. and Mili, H. and Bicknell, E. and Blettner, M.},
+  biburl = {https://www.bibsonomy.org/bibtex/2d61e3f5147b08d820c19ff9f49b7e487/schmitz},
+  booktitle = {IEEE Transactions on Systems, Man and Cybernetics},
+  interhash = {bbc22dbd9480173466ca912a4354015c},
+  intrahash = {d61e3f5147b08d820c19ff9f49b7e487},
+  keywords = {distance measure ontology similarity},
+  pages = {17-30},
+  timestamp = {2007-03-22T17:00:10.000+0100},
+  title = {Development and application of a metric on semantic nets},
+  year = 1989
+}
+
+@inproceedings{Ferragina:2008:SCS:1376916.1376943,
+ author = {Ferragina, Paolo and Grossi, Roberto and Gupta, Ankur and Shah, Rahul and Vitter, Jeffrey Scott},
+ title = {On Searching Compressed String Collections Cache-obliviously},
+ booktitle = {Proceedings of the Twenty-seventh ACM SIGMOD-SIGACT-SIGART Symposium on Principles of Database Systems},
+ series = {PODS '08},
+ year = {2008},
+ isbn = {978-1-60558-152-1},
+ location = {Vancouver, Canada},
+ pages = {181--190},
+ numpages = {10},
+ url = {http://doi.acm.org/10.1145/1376916.1376943},
+ doi = {10.1145/1376916.1376943},
+ acmid = {1376943},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {b-tree, cache efficiency, data compression, front coding, string searching},
+} 
+
+@book{Cover:2006:EIT:1146355,
+ author = {Cover, Thomas M. and Thomas, Joy A.},
+ title = {Elements of Information Theory (Wiley Series in Telecommunications and Signal Processing)},
+ year = {2006},
+ isbn = {0471241954},
+ publisher = {Wiley-Interscience},
+} 
+
+@inproceedings{DBLP:conf/focs/AlstrupHR98,
+  author    = {Stephen Alstrup and
+                 Thore Husfeldt and
+			                Theis Rauhe},
+  title     = {Marked Ancestor Problems},
+  booktitle = {{FOCS}},
+  pages     = {534--544},
+  publisher = {{IEEE} Computer Society},
+  year      = {1998}
+}
+
+@TECHREPORT{Burrows94ablock-sorting,
+    author = {M. Burrows and D. J. Wheeler},
+    title = {A block-sorting lossless data compression algorithm},
+    institution = {},
+    year = {1994}
+}
+
+@article{Chazelle1987,
+	author="Chazelle, Bernard",
+	title="Computing on a free tree via complexity-preserving mappings",
+	journal="Algorithmica",
+	year="1987",
+	month="Nov",
+	day="01",
+	volume="2",
+	number="1",
+	pages="337--361",
+	abstract="The relationship between linear lists and free trees is studied. We examine a
+			number of well-known data structures for computing functions on linear lists and show that
+			they can be canonically transformed into data structures for computing the same functions
+			defined over free trees. This is used to establish new upper bounds on the complexity of
+			several query-answering problems.",
+	issn="1432-0541",
+	doi="10.1007/BF01840366",
+	url="https://doi.org/10.1007/BF01840366"
+}
+
+@article{Raman:2007:SID:1290672.1290680,
+   author = {Raman, Rajeev and Raman, Venkatesh and Satti, Srinivasa Rao},
+   title = {Succinct Indexable Dictionaries with Applications to Encoding K-ary Trees, Prefix Sums and Multisets},
+   journal = {ACM Trans. Algorithms},
+   issue_date = {November 2007},
+   volume = {3},
+   number = {4},
+   month = nov,
+   year = {2007},
+   issn = {1549-6325},
+   articleno = {43},
+   url = {http://doi.acm.org/10.1145/1290672.1290680},
+   doi = {10.1145/1290672.1290680},
+   acmid = {1290680},
+   publisher = {ACM},
+   address = {New York, NY, USA},
+   keywords = {Dictionaries, multisets, perfect hashing, prefix sums, sets, succinct data structures, tries},
+} 
+
+@inproceedings{Leighton:1992:MMR:129712.129721,
+ author = {Leighton, Tom},
+ title = {Methods for Message Routing in Parallel Machines},
+ booktitle = {Proceedings of the Twenty-fourth Annual ACM Symposium on Theory of Computing},
+ series = {STOC '92},
+ year = {1992},
+ isbn = {0-89791-511-9},
+ location = {Victoria, British Columbia, Canada},
+ pages = {77--96},
+ numpages = {20},
+ url = {http://doi.acm.org/10.1145/129712.129721},
+ doi = {10.1145/129712.129721},
+ acmid = {129721},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+} 
+
+@book{Han:2005:DMC:1076797,
+ author = {Han, Jiawei},
+ title = {Data Mining: Concepts and Techniques},
+ year = {2005},
+ isbn = {1558609016},
+ publisher = {Morgan Kaufmann Publishers Inc.},
+ address = {San Francisco, CA, USA},
+} 
+
+@inproceedings{DBLP:conf/wads/BoseHMM09,
+  author    = {Prosenjit Bose and
+			                 Meng He and
+			                Anil Maheshwari and
+				               Pat Morin},
+   title     = {Succinct Orthogonal Range Search Structures on a Grid with Applications
+				               to Text Indexing},
+  booktitle = {{WADS}},
+   series    = {Lecture Notes in Computer Science},
+  volume    = {5664},
+    pages     = {98--109},
+  publisher = {Springer},
+    year      = {2009}
+}
+
+@article{DBLP:journals/algorithmica/HeMZ14,
+  author    = {Meng He and
+               J. Ian Munro and
+               Gelin Zhou},
+  title     = {A Framework for Succinct Labeled Ordinal Trees over Large Alphabets},
+  journal   = {Algorithmica},
+  volume    = {70},
+  number    = {4},
+  pages     = {696--717},
+  year      = {2014}
+}
+
+@inproceedings{Nekrich:2012:SRR:2368678.2368702,
+ author = {Nekrich, Yakov and Navarro, Gonzalo},
+ title = {Sorted Range Reporting},
+ booktitle = {Proceedings of the 13th Scandinavian Conference on Algorithm Theory},
+ series = {SWAT'12},
+ year = {2012},
+ isbn = {978-3-642-31154-3},
+ location = {Helsinki, Finland},
+ pages = {271--282},
+ numpages = {12},
+ url = {http://dx.doi.org/10.1007/978-3-642-31155-0_24},
+ doi = {10.1007/978-3-642-31155-0_24},
+ acmid = {2368702},
+ publisher = {Springer-Verlag},
+ address = {Berlin, Heidelberg},
+} 
+
+@article{DBLP:journals/dc/KormanP08,
+  author    = {Amos Korman and
+               David Peleg},
+  title     = {Compact separator decompositions in dynamic trees and applications
+               to labeling schemes},
+  journal   = {Distributed Computing},
+  volume    = {21},
+  number    = {2},
+  pages     = {141--161},
+  year      = {2008}
+}
+
+@MastersThesis{pallett,
+  title    = {Improving Query Performance of Holistic Aggregate Queries for Real-Time Data Exploration},
+  school   = {University of Twente},
+  author   = {Dennis Pallett},
+  year     = {2014}, 
+}
+
+@book{gomory1960multi,
+	title={Multi-terminal Network Flows},
+	author={Gomory, R.E. and Hu, T.C.},
+	url={https://books.google.ca/books?id=n4cnjwEACAAJ},
+	year={1960},
+	publisher={International Business Machines Corporation, Research Center}
+}
+
+@article{DBLP:journals/ipl/Crochemore81,
+		  author    = {Maxime Crochemore},
+		    title     = {An Optimal Algorithm for Computing the Repetitions in a Word},
+			  journal   = {Inf. Process. Lett.},
+			    volume    = {12},
+				  number    = {5},
+				    pages     = {244--250},
+					  year      = {1981}
+}
+
+@article{DBLP:journals/jcss/GusfieldS04,
+		  author    = {Dan Gusfield and
+				                 Jens Stoye},
+		    title     = {Linear time algorithms for finding and representing all the tandem
+					               repeats in a string},
+			  journal   = {J. Comput. Syst. Sci.},
+			    volume    = {69},
+				  number    = {4},
+				    pages     = {525--546},
+					  year      = {2004}
+}
+
+@inproceedings{DBLP:conf/esa/FerraginaM96,
+		  author    = {Paolo Ferragina and
+				                 S. Muthukrishnan},
+		    title     = {Efficient Dynamic Method-Lookup for Object Oriented Languages (Extended
+							               Abstract)},
+			  booktitle = {{ESA}},
+			    series    = {Lecture Notes in Computer Science},
+				  volume    = {1136},
+				    pages     = {107--120},
+					  publisher = {Springer},
+					    year      = {1996}
+}
+
+@inproceedings{DBLP:conf/swat/FarzanM08,
+		  author    = {Arash Farzan and
+				                 J. Ian Munro},
+		    title     = {A Uniform Approach Towards Succinct Representation of Trees},
+			  booktitle = {{SWAT}},
+			    series    = {Lecture Notes in Computer Science},
+				  volume    = {5124},
+				    pages     = {173--184},
+					  publisher = {Springer},
+					    year      = {2008}
+}
